add react helmet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LazyFrontender</title>
+    <Helmet>
+      <meta property="og:title" content="Lazy Dev" />
+      <meta property="og:description" content="lazyfrontender blog" />
+      <meta property="og:image" content="https://robohash.org/lazyfrontender" />
+      <meta property="og:url" content="https://lazyfrontender.uz" />
+      <meta property="og:type" content="website" />
+    </Helmet>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
